--- a/README
+++ b/README
@@ -4,6 +4,14 @@ This project is licensed under the GNU GPLv3.
 You are free to use, modify, and redistribute this software as long as derivative works remain open source.
 
 
----
+# Wamdo Website
 
-This website is developed in hopes that it can serve as a future company's website where all important information can be found.
+Official website for the Wamdo project.
+
+## Tech
+- HTML
+- CSS (design tokens + theming)
+- Vanilla JavaScript
+
+## Live site
+https://wamdopb.github.io/wamdo-website/
